--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "spatie/flysystem-dropbox": "^2.0"
+        "spatie/flysystem-dropbox": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
